<resources>
    <string name="app_name">KTTS Task</string>

    <!-- Auth -->
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to_continue">Login to continue</string>
    <string name="forgot_password">Forget Password</string>
    <string name="create">Create</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="registered_email">Registered Email</string>
    <string name="txt_continue">Continue</string>
    <string name="change_password">Change Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="new_password">New Password</string>

    <!-- Validations -->
    <string name="err_empty_name">Name cannot be empty</string>
    <string name="err_invalid_name">Name is invalid</string>

    <string name="err_empty_email">Email cannot be empty</string>
    <string name="err_invalid_email">Please enter a valid email</string>
    <string name="err_duplicate_email">Email already exists</string>
    <string name="err_email_not_exists">Email does not exists</string>

    <string name="err_empty_password">Password cannot be empty</string>
    <string name="err_password_length">Password must contain at least 8 characters</string>
    <string name="err_password_not_matched">Passwords are not matched</string>
    <string name="err_same_as_old_password">Password cannot be same as old password</string>
    <string name="no_location_history_available">No Location History Available</string>
    <string name="location_history">Location History</string>
    <string name="add_user">Add User</string>
    <string name="stop_service_and_quit_app">Stop Service and Quit App</string>

</resources>