<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/screen_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        app:layout_constraintTop_toBottomOf="@id/screen_title"
        app:layout_constraintStart_toStartOf="@id/screen_title"
        app:layout_constraintEnd_toEndOf="@id/screen_title"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/screen_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        android:layout_marginTop="50dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/onBackground"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="-20dp"
        app:cornerRadius="15dp"
        android:textSize="16sp"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/btn_forget_pass"
        android:layout_marginTop="40dp"
        app:cornerRadius="15dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_account"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/onBackground"
        android:layout_marginTop="10dp"
        app:cornerRadius="15dp"
        android:textSize="16sp"
        android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>